# prepwise

./: .dockerignore  ARCHITECTURE_IMPROVEMENTS.md  README.md  docker-compose.yml  env.example  pyproject.toml  start.sh  test_integration.py
scripts/: example_load_agents.py
services/backend-service/: Dockerfile  README.md  requirements.txt
services/backend-service/app/: config.py  main.py
services/backend-service/app/agents/: orchestrator.py  session_manager.py  specialized_agents.py  workflow_tools.py
services/backend-service/app/models/: __init__.py  response_models.py
services/backend-service/app/services/: web_scraper.py
services/frontend-service/: Dockerfile  README.md  requirements.txt
services/frontend-service/app/: streamlit_app.py
shared/: __init__.py
